# researchbuddy

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  cli.py  cli_doctor.py  cli_help.py  constants.py
app/agents/: base.py  lane_planner.py  lane_refiner.py  synthesizer.py
app/core/: logging.py  settings.py
app/models/: __init__.py  homebrew.py  review.py  skills.py
app/services/: __init__.py  chatgpt.py  codex_exec.py  followup.py  homebrew_tap.py  local_audio_transcriber.py  podcast_transcriber.py  query_shaper.py  research_profiles.py  search_provider.py  semantic_dedupe.py  setup_runtime.py  skill_installer.py  storage.py  transcript_summarizer.py  url_handlers.py  usage_tracker.py  youtube_transcriber.py
app/tests/: __init__.py  test_chatgpt.py  test_cli_doctor.py  test_cli_help.py  test_codex_agents.py  test_dev_wrapper.py  test_followup.py  test_homebrew_tap.py  test_lane_budgeting.py  test_lane_prompts.py  test_podcast_transcriber.py  test_query_shaper.py  test_research_compression.py  test_review_provider_ingestion.py  test_review_workflow.py  test_search_provider.py  test_semantic_dedupe.py  test_settings.py  test_setup_runtime.py  test_skill_installer.py  test_storage.py  test_usage_tracker.py  test_youtube_transcriber.py
benchmarks/: README.md  report.md  run.sh
benchmarks/rust-composed-stack/: Cargo.toml
benchmarks/rust-composed-stack/src/: main.rs
docs/: agent-cli-reference.md  architecture.md  cli-reference.md  deploy.md  folder.md  homebrew.md  rust-plan.md
scripts/: researchbuddy  startup.sh
(+261 files in other folders)
